--- a/.gitignore
+++ b/.gitignore
@@ -4,6 +4,8 @@
 src/main/java/connection/ConnectionCMS.java
 !src/**/build/
 src/main/webapp/home.jsp
+src/main/webapp/login.jsp
+src/main/webapp/adminHome.jsp
 
 # Ignore Gradle GUI config
 gradle-app.setting
